upgrading JS to Modular structure

--- a/MODAMSWeb/Areas/Admin/Views/Categories/EditCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/EditCategory.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.Category
 
+@{
+    ViewData["TourPageKey"] = "Categories/EditCategory";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
