--- a/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.CategoriesDTO
 
+@{
+    ViewData["TourPageKey"] = "Categories/Index";
+}
+
 <style>
     .trShadow {
         border: 1px solid lightblue;
