--- a/MODAMSWeb/Areas/Admin/Views/Departments/CreateDepartment.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/CreateDepartment.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.DepartmentDTO
 
+@{
+    ViewData["TourPageKey"] = "Departments/CreateDepartment";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
