--- a/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.DepartmentsDTO
 
+@{
+    ViewData["TourPageKey"] = "Departments/Index";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["Departments"]</h1>
