--- a/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Departments/OrganizationChart.cshtml
@@ -4,6 +4,10 @@
 
 @model List<MODAMS.Models.ViewModels.Dto.OrganizationChartDTO>
 
+@{
+    ViewData["TourPageKey"] = "Departments/OrganizationChart";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["Departments"]</h1>
