--- a/MODAMSWeb/Areas/Admin/Views/Donors/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Donors/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model List<MODAMS.Models.Donor>
 
+@{
+    ViewData["TourPageKey"] = "Donors/Index";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["Donors"]</h1>
