--- a/MODAMSWeb/Areas/Admin/Views/Employees/CreateEmployee.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/CreateEmployee.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.EmployeeDTO
 
+@{
+    ViewData["TourPageKey"] = "Employees/CreateEmployee";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
