--- a/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Employees/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model List<MODAMS.Models.ViewModels.vwEmployees>
 
+@{
+    ViewData["TourPageKey"] = "Employees/Index";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
