--- a/MODAMSWeb/Areas/Admin/Views/Settings/Index.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Settings/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model MODAMS.Models.ViewModels.Dto.SettingsDTO
 
+@{
+    ViewData["TourPageKey"] = "Settings/Index";
+}
+
 <style>
     .trShadow {
         border: 1px solid lightblue;
