--- a/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Alerts/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.AlertsDTO
 
+@{
+    ViewData["TourPageKey"] = "Alerts/Index";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["Alerts"]</h1>
