--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetDocuments.cshtml
@@ -4,6 +4,10 @@
 @model MODAMS.Models.ViewModels.Dto.AssetDocumentDTO
 @inject IViewLocalizer Localizer
 
+@{
+    ViewData["TourPageKey"] = "Assets/AssetDocuments";
+}
+
 <style>
     cardHeight {
         min-height: 600px;
