--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetPictures.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.AssetPicturesDTO
 
+@{
+    ViewData["TourPageKey"] = "Assets/AssetPictures";
+}
+
 <style>
     .input-group {
         display: flex;
