--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetReport.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetReport.cshtml
@@ -5,6 +5,9 @@
 @inject IViewLocalizer Localizer
 @inject MODAMS.Utility.IAMSFunc _func
 
+@{
+    ViewData["TourPageKey"] = "Assets/AssetReport";
+}
 
 <link href="~/css/assetinfo.css" rel="stylesheet" />
 <div class="page-header">
