--- a/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/EditAsset.cshtml
@@ -278,5 +278,5 @@
     </script>
 
     <!-- Your new page script -->
-    <script src="~/js/assets-editasset.js"></script>
+    <script src="~/js/pages/assets-editasset.js"></script>
 }
