--- a/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/CreateDisposal.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.DisposalCreateDTO
 
+@{
+    ViewData["TourPageKey"] = "Disposals/CreateDisposal";
+}
+
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
