--- a/MODAMSWeb/Areas/Users/Views/Disposals/EditDisposal.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/EditDisposal.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.DisposalEditDTO
 
+@{
+    ViewData["TourPageKey"] = "Disposals/EditDisposal";
+}
+
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
