--- a/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Disposals/Index.cshtml
@@ -4,7 +4,9 @@
 
 @model MODAMS.Models.ViewModels.Dto.DisposalsDTO
 
-
+@{
+    ViewData["TourPageKey"] = "Disposals/Index";
+}
 
 <div class="page-header">
     <div>
