--- a/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Index.cshtml
@@ -302,7 +302,7 @@
         };
     </script>
 
-    <script src="~/js/home-index.js"></script>
+    <script src="~/js/pages/home-index.js"></script>
 }
 
 
