--- a/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Newsfeed.cshtml
@@ -5,6 +5,10 @@
 @model List<MODAMS.Models.NewsFeed>
 @inject MODAMS.Utility.IAMSFunc _func;
 
+@{
+    ViewData["TourPageKey"] = "Home/Newsfeed";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
