--- a/MODAMSWeb/Areas/Users/Views/Home/Profile.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Profile.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.ProfileDataDTO
 
+@{
+    ViewData["TourPageKey"] = "Home/Profile";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
