--- a/MODAMSWeb/Areas/Users/Views/Home/Settings.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Home/Settings.cshtml
@@ -2,6 +2,10 @@
 @using System.Globalization
 @inject IViewLocalizer Localizer
 
+@{
+    ViewData["TourPageKey"] = "Home/Settings";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
