--- a/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Reporting/Index.cshtml
@@ -5,6 +5,9 @@
 
 @model MODAMS.Models.ViewModels.Dto.ReportingDTO
 
+@{
+    ViewData["TourPageKey"] = "Reporting/Index";
+}
 
 <div class="page-header">
     <div>
