--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -311,5 +311,5 @@
         };
     </script>
 
-    <script src="~/js/store-details.js"></script>
+    <script src="~/js/pages/store-details.js"></script>
 }
