--- a/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/CreateTransfer.cshtml
@@ -1,7 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-
 @model MODAMS.Models.ViewModels.Dto.TransferCreateDTO
+
+@{
+    ViewData["TourPageKey"] = "Transfers/CreateTransfer";
+}
+
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
