--- a/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.TransferDTO
 
+@{
+    ViewData["TourPageKey"] = "Transfers/Index";
+}
+
 <style>
     .rd {
         cursor: pointer;
