--- a/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/ReceivedAssets.cshtml
@@ -3,6 +3,11 @@
 @inject IViewLocalizer Localizer
 
 @model List<MODAMS.Models.ViewModels.Dto.TransfersIncomingAssetDTO>
+
+@{
+    ViewData["TourPageKey"] = "Transfers/ReceivedAssets";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["ReceivedAssets"]</h1>
