--- a/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/EditSchedule.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.VerificationScheduleEditDTO
 
+@{
+    ViewData["TourPageKey"] = "Verifications/EditSchedule";
+}
+
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
