--- a/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/Index.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.VerificationsDTO
 
+@{
+    ViewData["TourPageKey"] = "Verifications/Index";
+}
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/c3@0.7.20/c3.min.css">
 
 <div class="page-header">
