--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -109,10 +109,12 @@
     <script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
 
     <script src="~/js/utils.js"></script>
+    <script src="~/js/core/page-registry.js"></script>
     <link rel="stylesheet" href="~/css/pams-tutor.css" />
 </head>
 
-<body class="app sidebar-mini ltr" data-page="@((ViewData["TourPageKey"] ?? "").ToString())">
+<body data-page="@((ViewData["TourPageKey"] ?? "").ToString())"
+      data-page-fallback="@($"{ViewContext.RouteData.Values["Controller"]}/{ViewContext.RouteData.Values["Action"]}")">
 
     <!-- GLOBAL-LOADER -->
     <div id="global-loader">
@@ -180,7 +182,7 @@
     <script src="~/js/tours-loader.js" asp-append-version="true"></script>
     @* <script src="~/js/tours/pams-tutor.js"></script> *@
     <script src="~/js/tutor/pams-tutor-core.js" asp-append-version="true"></script>
-    <script src="~/js/layout.js" asp-append-version="true"></script>
+    <script src="~/js/pages/layout.js" asp-append-version="true"></script>
 
     <partial name="_ValidationScriptsPartial" />
     <partial name="_Notification" />
