--- a/MODAMSWeb/Areas/Admin/Views/Categories/CreateCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/CreateCategory.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.Category
 
+@{
+    ViewData["TourPageKey"] = "Categories/CreateCategory";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
