--- a/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Categories/CreateSubCategory.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.ViewModels.Dto.SubCategoryDTO
 
+@{
+    ViewData["TourPageKey"] = "Categories/CreateSubCategory";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
