--- a/MODAMSWeb/Areas/Admin/Views/Donors/EditDonor.cshtml
+++ b/MODAMSWeb/Areas/Admin/Views/Donors/EditDonor.cshtml
@@ -4,6 +4,10 @@
 
 @model MODAMS.Models.Donor
 
+@{
+    ViewData["TourPageKey"] = "Donors/EditDonor";
+}
+
 <!-- PAGE-HEADER -->
 <div class="page-header">
     <div>
