--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetInfo.cshtml
@@ -437,7 +437,7 @@
     <script src="~/assets/plugins/gallery/lg-zoom.js"></script>
     <script src="~/assets/plugins/gallery/lg-hash.js"></script>
     <script src="~/assets/plugins/gallery/lg-share.js"></script>
-    <script src="~/js/asset-info.js"></script>
+    <script src="~/js/pages/asset-info.js"></script>
     <script>
         $(document).ready(function () {
             hideMenu();
