--- a/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Assets/AssetList.cshtml
@@ -5,6 +5,10 @@
 @model MODAMS.Models.ViewModels.Dto.AssetListDTO
 @inject IViewLocalizer Localizer
 
+@{
+    ViewData["TourPageKey"] = "Assets/AssetList";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["AssetList"]</h1>
