--- a/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Transfers/TransferredAssets.cshtml
@@ -3,6 +3,11 @@
 @inject IViewLocalizer Localizer
 
 @model List<MODAMS.Models.ViewModels.Dto.TransfersOutgoingAssetDTO>
+
+@{
+    ViewData["TourPageKey"] = "Transfers/TransferredAssets";
+}
+
 <div class="page-header">
     <div>
         <h1 class="page-title">@Localizer["TransferredAssets"]</h1>
