--- a/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/CreateSchedule.cshtml
@@ -2,6 +2,10 @@
 @inject IViewLocalizer Localizer
 @model MODAMS.Models.ViewModels.Dto.VerificationScheduleCreateDTO
 
+@{
+    ViewData["TourPageKey"] = "Verifications/CreateSchedule";
+}
+
 <style>
     input[type="date"]::-webkit-calendar-picker-indicator {
         display: none;
