--- a/MODAMSWeb/Areas/Users/Views/Verifications/PreviewSchedule.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Verifications/PreviewSchedule.cshtml
@@ -2,6 +2,11 @@
 @inject IViewLocalizer Localizer
 
 @model MODAMS.Models.ViewModels.Dto.VerificationSchedulePreviewDTO
+
+@{
+    ViewData["TourPageKey"] = "Verifications/PreviewSchedule";
+}
+
 <style>
     .is-invalid {
         border-color: red;
