--- a/MODAMSWeb/Views/Shared/_Layout.cshtml
+++ b/MODAMSWeb/Views/Shared/_Layout.cshtml
@@ -5,7 +5,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
     @{
         var tokens = Antiforgery.GetAndStoreTokens(ViewContext.HttpContext);
         var bridge = new
@@ -26,11 +25,10 @@
             nowUtc = DateTime.UtcNow
         };
     }
-    
     <script>
         window.PAMS = window.PAMS || {};
         // One canonical bridge object, JSON-serialized server-side (prevents XSS string concat bugs)
-        window.PAMS.bridge = @Html.Raw(JsonSerializer.Serialize(bridge));
+        window.PAMS.bridge = @Html.Raw(JsonSerializer.Serialize(bridge))
         
     </script>
 
@@ -71,7 +69,6 @@
             display: inline-block;
             vertical-align:middle;
         }
-
             .pams-help-fab:hover {
                 filter: brightness(0.95);
             }
@@ -97,11 +94,8 @@
     <!-- Add FontAwesome in <head> if not added -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-
     <!-- Kendo UI -->
     <link href="https://kendo.cdn.telerik.com/themes/7.0.2/bootstrap/bootstrap-main.css" rel="stylesheet" />
-  
-    
     
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdn.kendostatic.com/2023.2.606/js/jszip.min.js"></script>
@@ -109,19 +103,26 @@
     <script src="https://cdn.kendostatic.com/2023.2.606/js/kendo.aspnetmvc.min.js"></script>
 
     <script src="~/js/utils.js"></script>
+    <script src="~/js/utils.js"></script>
+    <script>
+        // make the namespace and the toggle reachable from everywhere
+        window.U = (window.PAMS && window.PAMS.util) || {};
+        window.hideMenu = window.hideMenu || window.U.hideMenu;
+    </script>
+
+
     <script src="~/js/core/page-registry.js"></script>
     <link rel="stylesheet" href="~/css/pams-tutor.css" />
 </head>
 
-<body data-page="@((ViewData["TourPageKey"] ?? "").ToString())"
-      data-page-fallback="@($"{ViewContext.RouteData.Values["Controller"]}/{ViewContext.RouteData.Values["Action"]}")">
+<body data-page="@((ViewData["TourPageKey"] ?? "").ToString())" data-page-fallback="@($"{ViewContext.RouteData.Values["Controller"]}/{ViewContext.RouteData.Values["Action"]}")">
 
     <!-- GLOBAL-LOADER -->
     <div id="global-loader">
         <img src="~/assets/images/loader.svg" class="loader-img" alt="Loader">
     </div>
 
-    <div class="page">
+    <div class="app sidebar-mini page">
         <div class="page-main">
             <partial name="layouts/_app-header.cshtml" />
             <partial name="layouts/_app-sidebar.cshtml" />
@@ -164,7 +165,6 @@
     <script src="~/assets/plugins/datatable/js/buttons.colVis.min.js"></script>
     <script src="~/assets/plugins/datatable/dataTables.responsive.min.js"></script>
     <script src="~/assets/plugins/datatable/responsive.bootstrap5.min.js"></script>
-
     <script src="~/assets/plugins/p-scroll/perfect-scrollbar.js"></script>
     <script src="~/assets/js/form-validation.js"></script>
     <script src="~/assets/js/sticky.js"></script>
@@ -195,8 +195,6 @@
     {
         @await RenderSectionAsync("Scripts", required: false)
     }
-    
-    
 
 </body>
 </html>
