--- a/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
+++ b/MODAMSWeb/Areas/Users/Views/Stores/StoreDetails.cshtml
@@ -298,11 +298,13 @@
 }
 
 <section id="dvChartData" style="display:none;"></section>
+
+<link rel="stylesheet" href="~/assets/plugins/c3-0.7.20/c3.min.css" />
+
 @section scripts {
-
-    <script src="~/assets/plugins/c3-0.7.20/d3-5.8.2.min.js"></script>
-    <script src="~/assets/plugins/c3-0.7.20/c3.min.js"></script>
-
+    <partial name="_DatatablesAssets" />
+    <partial name="_ChartAssets" />
+    
     <!-- expose data for external JS (no Razor inside .js files) -->
     <script>
         window.storeDetailsData = {
